<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#2196F3"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_column="1"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/this_is_row_1"
            android:textColor="#F1EEEE"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_height="100dp"
        android:background="#2FC5B7"
        android:gravity="center"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row2"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column1"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"


            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row2"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column2"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row2"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column3"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_height="100dp"
        android:background="#EACD84"
        android:gravity="center"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row3"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column1"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"


            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row3"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column2"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row4"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column3"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_height="100dp"
        android:background="#D6B8A1"
        android:gravity="center"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row4"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column1"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"


            android:layout_height="100dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row4"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column2"
                android:textColor="#1C1A1A"
                android:textSize="12sp" />


        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#2196F3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="1"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/this_is_row_5"
            android:textAlignment="center"
            android:textColor="#F1EEEE"
            android:textSize="24sp" />

    </TableRow>


</TableLayout>